@@ -45,6 +45,7 @@ gvcf_compressor::
 is_site_compressable(
     const site_info& si) const
 {
+    if (si.forcedOutput) return false;
     if (! _opt.is_block_compression) return false;
 
     if (si.dgt.is_snp) return false;
