@@ -139,7 +139,7 @@ struct starling_pos_processor_base : public pos_processor_base, private boost::n
         const MAPLEVEL::index_t maplev,
         const unsigned sample_no);
 
-    /// snv gt and stats must be reported for this pos (note only honored in strelka right now)
+    /// snv gt and stats must be reported for this pos (note only honored in strelka and starling right now)
     void
     insert_forced_output_pos(const pos_t pos);
 
